Several bugfixes for Minimax Q-Learning.

--- a/tex/report3.tex
+++ b/tex/report3.tex
@@ -26,7 +26,15 @@ A problem with this algorithm is that the Q-Learning algorithm assumes a static 
 
 \section{Method}
 
-Something here...
+\subsection{Independent Q-Learning}
+
+\subsection{Minimax Q-Learning}
+
+\subsection{GIGA-WoLF}
+
+Our implementation of the GIGA-WoLF algorithm was slightly modified to better fit the proposed problem. In the first place, we adapted the algorithm to the model-free case. The original method considers the derivative of the $\pi$ function with respect of all actions, but we cannot do this 
+
+Figure \ref{fig:wolf-predators} shows the performance of the GIGA-WoLF algorithm for ...
 
 \subsection{Scoring system}
 
