Small fixes to the figures layout.

--- a/tex/report3.tex
+++ b/tex/report3.tex
@@ -241,6 +241,8 @@ There is another subtlety we need to take care of. If we are in a setting with $
 \label{fig:ql-params}
 \end{figure}
 
+\newpage
+
 \begin{figure}[ht!]
  \centering
  
@@ -359,8 +361,10 @@ There is another subtlety we need to take care of. If we are in a setting with $
 \end{tabular}
 
 \caption{Performance of the minimax Q-Learning algorithm for different combinations of its parameters. The ``1 predator versus 1 prey'' scenario was tested. Unless otherwise stated, the parameters used were: $\alpha = 0.9, \gamma = 0.9, \epsilon = 0.1, Q(s, a) = 15$.}
-\label{fig:ql-params}
+\label{fig:minimax-params}
 \end{figure}
+
+\newpage
 
 \begin{figure}[ht!]
  \centering
